# cocktails_translating

./: .env.template  .gitattributes  .gitignore  CITATION.cff  README.md  pyproject.toml
cocktails_translator/: settings.py
cocktails_translator/notebooks/: 001-data-observe.py  001-pull-and-translate.py  002-push-translated-to-hub.py  003-fix-original-datset-pr.py  test.py  test2.py
